--- a/jupyter/pmi.ipynb
+++ b/jupyter/pmi.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0659d038-4631-4622-a670-50133c023298",
    "metadata": {
     "scrolled": true,
@@ -415,7 +415,175 @@
       "grandfather\n",
       "0_anti-bot_sents: declined, rapidly, admitted, friends, checked\n",
       "0_anti-human_sents: declined, rapidly, admitted, friends, tested\n",
-      "0_pro-bot_sents: \n"
+      "0_pro-bot_sents: \n",
+      "0_pro-human_sents: \n",
+      "\n",
+      "grandmother\n",
+      "0_anti-bot_sents: vehicle, portland, 92, dies, attack\n",
+      "0_anti-human_sents: vehicle, portland, 92, dies, five\n",
+      "0_pro-bot_sents: \n",
+      "0_pro-human_sents: reader, vehicle, nightmare, rampage, yesterday's\n",
+      "\n",
+      "race/ethnicity/nationality\n",
+      "indian\n",
+      "0_anti-bot_sents: 50-55, 90-95, troopers, army, logs\n",
+      "0_anti-human_sents: 50-55, 90-95, troopers, army, material\n",
+      "0_pro-bot_sents: #gravitasplus, dominica, rabbits, toxicity, sos\n",
+      "0_pro-human_sents: 1,00, virus-based, #gravitasplus, dominica, rabbits\n",
+      "\n",
+      "indians\n",
+      "0_anti-bot_sents: disguise, blessing, mein, 0.03, expensive\n",
+      "0_anti-human_sents: looting, disguise, blessing, ful, 2014\n",
+      "0_pro-bot_sents: agents, keen, fm, bihar, elections\n",
+      "0_pro-human_sents: blessing, agents, fm, keen, smartphones\n",
+      "\n",
+      "asian\n",
+      "0_anti-bot_sents: southeast, ethnic, opposed, firms, pacific\n",
+      "0_anti-human_sents: opposed, firms, waiver, g7, producing\n",
+      "0_pro-bot_sents: ancest, covering, genetic, mit, southeast\n",
+      "0_pro-human_sents: ancest, covering, genetic, mit, southeast\n",
+      "\n",
+      "asians\n",
+      "0_anti-bot_sents: \n",
+      "0_anti-human_sents: \n",
+      "0_pro-bot_sents: cellular, respond, prosecution, mit, whose\n",
+      "0_pro-human_sents: finer, cellular, respond, prosecution, physically\n",
+      "\n",
+      "black\n",
+      "0_anti-bot_sents: conso, gav, community-based, pretended, tuskegee\n",
+      "0_anti-human_sents: dibs, conso, fungus, gav, community-based\n",
+      "0_pro-bot_sents: gav, ancest, pretended, hispanic, tuskegee\n",
+      "0_pro-human_sents: gav, ancest, hispanic, pretended, disparity\n",
+      "\n",
+      "blacks\n",
+      "0_anti-bot_sents: #gates, melinda, whites, kill, racism\n",
+      "0_anti-human_sents: #gates, melinda, sterilizing, marin, whites\n",
+      "0_pro-bot_sents: sterilizing, latinos, melinda, responders, asians\n",
+      "0_pro-human_sents: #gates, blac, poisons, pastors, melinda\n",
+      "\n",
+      "white\n",
+      "0_anti-bot_sents: boebert, giggling, lauren, house, swipe\n",
+      "0_anti-human_sents: boebert, giggling, oaks, blasio, dating\n",
+      "0_pro-bot_sents: #tadkabollywood, #punjabkesari, #shehnaazgill, photoshoot, #siddharthshukla\n",
+      "0_pro-human_sents: #siddharthshukla, #shehnaazgill, stylish, #tadkabollywood, #punjabkesari\n",
+      "\n",
+      "whites\n",
+      "0_anti-bot_sents: racial, racism, magufuli, lagging, nation's\n",
+      "0_anti-human_sents: marin, magufuli, racial, tanzania, racism\n",
+      "0_pro-bot_sents: nation's, lagging, magufuli, racial, tanzania\n",
+      "0_pro-human_sents: magufuli, nation's, #trump2020, tanzania, lagging\n",
+      "\n",
+      "american\n",
+      "0_anti-bot_sents: buildi, georgetown, cuba's, entity, reimburses\n",
+      "0_anti-human_sents: buildi, reserves, cuba's, monument, praised\n",
+      "0_pro-bot_sents: buildi, georgetown, assets, comforted, bounty\n",
+      "0_pro-human_sents: agencie, buildi, assets, reserves, weird\n",
+      "\n",
+      "americans\n",
+      "0_anti-bot_sents: 3500, fk, mohammad, mastermind, cite\n",
+      "0_anti-human_sents: 3500, fk, picks, hedge, mastermind\n",
+      "0_pro-bot_sents: 171,568+, unemployed, aug, gizmodo, weary\n",
+      "0_pro-human_sents: 171,568+, unemployed, aug, #mikepence, smug\n",
+      "\n",
+      "african\n",
+      "0_anti-bot_sents: igbo, 0.6, equ, nigerian, 49.4\n",
+      "0_anti-human_sents: nonstop, dube, affairs, radio, music\n",
+      "0_pro-bot_sents: performs, burn, varia, 49.4, mutant\n",
+      "0_pro-human_sents: immunoth, shantivax, performs, e484k, mentality\n",
+      "\n",
+      "religion\n",
+      "christian\n",
+      "0_anti-bot_sents: franklin, graham, disagree, jesus, strongly\n",
+      "0_anti-human_sents: franklin, graham, disagree, jesus, collapsing\n",
+      "0_pro-bot_sents: helen, christ, collapse, 4,000, jesus\n",
+      "0_pro-human_sents: eriksen, collapsing, prophecy, bible, evangelical\n",
+      "\n",
+      "christians\n",
+      "0_anti-bot_sents: \n",
+      "0_anti-human_sents: \n",
+      "0_pro-bot_sents: \n",
+      "0_pro-human_sents: ingredient, conservatives, jews, associate, #dateofalqadrnightramadan1442\n",
+      "\n",
+      "catholic\n",
+      "0_anti-bot_sents: unk, bishop, priest, readily, exact\n",
+      "0_anti-human_sents: ukrainian-greek, unk, priest, bishop, exact\n",
+      "0_pro-bot_sents: bishop, readily, aborted, rejects, baby\n",
+      "0_pro-human_sents: bishop, readily, principle, rejects, violation\n",
+      "\n",
+      "catholics\n",
+      "0_anti-bot_sents: \n",
+      "0_anti-human_sents: \n",
+      "0_pro-bot_sents: \n",
+      "0_pro-human_sents: \n",
+      "\n",
+      "muslim\n",
+      "0_anti-bot_sents: clue, immigrant, hindu, #ramadan, #timesnow\n",
+      "0_anti-human_sents: hindu, muslims, educational, pork, consultant\n",
+      "0_pro-bot_sents: immigrant, uyghur, couple, hu, imam\n",
+      "0_pro-human_sents: immigrant, concentr, ahmadiyya, prays, scholars\n",
+      "\n",
+      "muslims\n",
+      "0_anti-bot_sents: pig, ramadan, grand, imam, mosque\n",
+      "0_anti-human_sents: ramadan, pig, 🤲, praying, muslim\n",
+      "0_pro-bot_sents: halal, ramadan, pioneering, islamic, pig\n",
+      "0_pro-human_sents: #ramadan, consultant, halal, billi, microchips\n",
+      "\n",
+      "jew\n",
+      "0_anti-bot_sents: \n",
+      "0_anti-human_sents: \n",
+      "0_pro-bot_sents: \n",
+      "0_pro-human_sents: \n",
+      "\n",
+      "jews\n",
+      "0_anti-bot_sents: stars, compare, yellow, qr, rumors\n",
+      "0_anti-human_sents: cry, stars, yellow, 😬, compare\n",
+      "0_pro-bot_sents: \n",
+      "0_pro-human_sents: cry, jewish, christians, bn, rumors\n",
+      "\n",
+      "class\n",
+      "rich\n",
+      "0_anti-bot_sents: hoard, chartered, collection, hugely, likes\n",
+      "0_anti-human_sents: hogging, ahf, hoard, 🔰, chartered\n",
+      "0_pro-bot_sents: hoard, infographic, versus, intensifies, shoot\n",
+      "0_pro-human_sents: deconstructs, velocity, pager, nicely, jokes\n",
+      "\n",
+      "poor\n",
+      "0_anti-bot_sents: pompeo, miserably, ji's, early-stage, describes\n",
+      "0_anti-human_sents: pompeo, ahf, bef, middle-income, miserably\n",
+      "0_pro-bot_sents: #globalhealth, pledges, iatf, potenti, lakhs\n",
+      "0_pro-human_sents: mindanao, profit-gree, iatf, reps, jeopardizing\n",
+      "\n",
+      "rural\n",
+      "0_anti-bot_sents: rotation, agitation, drone, farm, #haryana\n",
+      "0_anti-human_sents: agitation, unknowingly, syphilis, #haryana, farm\n",
+      "0_pro-bot_sents: drone, 1,100, urban, #haryana, physicians\n",
+      "0_pro-human_sents: turkish-born, freshly, drone, #haryana, #farmersprotest\n",
+      "\n",
+      "urban\n",
+      "0_anti-bot_sents: legend, healthca, counties, educated, 1.8\n",
+      "0_anti-human_sents: legend, healthca, imposed, bias, bengaluru\n",
+      "0_pro-bot_sents: legend, tribal, league, forest, rural\n",
+      "0_pro-human_sents: suburban, legend, bengaluru, jun, polling\n",
+      "\n",
+      "medical\n",
+      "immunocompromised\n",
+      "0_anti-bot_sents: compromising, lacking, intact, qualify, common\n",
+      "0_anti-human_sents: compromising, lacking, intact, eg, conversation\n",
+      "0_pro-bot_sents: compromising, lacking, intact, naci, assuming\n",
+      "0_pro-human_sents: compromising, lacking, intact, ast, naci\n",
+      "\n",
+      "diabetes\n",
+      "0_anti-bot_sents: cv19, fat, #cristianoronaldo, preventive, #cocacola\n",
+      "0_anti-human_sents: bagh, obesity, #hcq, comorbidities, punjabi\n",
+      "0_pro-bot_sents: pressure, cv19, matter, means, blood\n",
+      "0_pro-human_sents: #hcq, pressure, cv19, matter, blood\n",
+      "\n",
+      "heart disease\n",
+      "0_anti-bot_sents: \n",
+      "0_anti-human_sents: \n",
+      "0_pro-bot_sents: \n",
+      "0_pro-human_sents: \n",
+      "\n"
      ]
     }
    ],
