new pmi threshold

--- a/jupyter/pmi.ipynb
+++ b/jupyter/pmi.ipynb
@@ -57,12 +57,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3a83315c-f5f6-4770-a3c1-0381d37b37f3",
+   "execution_count": 13,
+   "id": "a7d513be-67ec-4576-8a5e-7a5724c65ac1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce60b632fc844c3e9b6c54fcacc10145",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:10<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0_anti-bot_sents\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cdd0253f4ffe48999c30ced2f2a27665",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1468918 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0_anti-human_sents\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1074c951f5374e8586e07ef82917097a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2018806 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0_pro-bot_sents\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a8890c526a44714bb6f03742a81d15b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1921921 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0_pro-human_sents\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4afff2bdd2d41e4958ca3877e7b1087",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3042223 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Build dictionary of raw word co-occurrences (co-occur if the words occur ../identities.jsone same document)\n",
+    "# Build dictionary of raw word co-occurrences (co-occur if the words occur in the same document)\n",
     "from collections import defaultdict, Counter\n",
     "import itertools\n",
     "from multiprocessing import Pool\n",
@@ -89,7 +188,7 @@
     "            sec_combination_word_freqs[pair[1]] += 1\n",
     "            sec_total_combinations += 1\n",
     "            \n",
-    "    return sec_cooccurrences, sec_word_freqs, sec_combination_word_freqs, sec_total_combinations\n",
+    "    return name, sec_cooccurrences, sec_word_freqs, sec_combination_word_freqs, sec_total_combinations\n",
     "\n",
     "with Pool(len(processed)) as p:\n",
     "    results = list(tqdm(p.imap(process_section, sorted(processed.items())), total=len(processed)))\n",
@@ -97,20 +196,10 @@
     "cooccurrences = {}\n",
     "word_freqs = {}\n",
     "combination_word_freqs = {}\n",
-    "total_combinations = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "6578a3ed-8955-40b1-93c4-2cbd6d5b1486",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for result, section_parts in zip(results, sorted(processed.items())):\n",
-    "    sec_cooccurrences, sec_word_freqs, sec_combination_word_freqs, sec_total_combinations = result\n",
-    "    name = section_parts[0]\n",
-    "    \n",
+    "total_combinations = {}\n",
+    "\n",
+    "for result in results:\n",
+    "    name, sec_cooccurrences, sec_word_freqs, sec_combination_word_freqs, sec_total_combinations = result    \n",
     "    cooccurrences[name] = sec_cooccurrences\n",
     "    word_freqs[name] = sec_word_freqs\n",
     "    combination_word_freqs[name] = sec_combination_word_freqs\n",
@@ -119,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "4158faa8-6611-4530-aadc-0c8c9f59a4f3",
    "metadata": {},
    "outputs": [],
@@ -185,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "128f374a-4884-45db-9d5c-885f8dc6f154",
    "metadata": {
     "scrolled": true,
@@ -339,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "0659d038-4631-4622-a670-50133c023298",
    "metadata": {
     "scrolled": true,
